--- a/src/app/components/battlefield/battlefield.component.html
+++ b/src/app/components/battlefield/battlefield.component.html
@@ -1,7 +1,14 @@
-<button type="button" data-bs-toggle="modal" data-bs-target="#deckProcessorModal">
+<div class="col">
+<button data-bs-toggle="modal" data-bs-target="#deckProcessorModal">
   Import Deck
 </button>
-
+  <button>
+    Help
+  </button>
+  <button data-bs-toggle="modal" data-bs-target="#saveGameModal">
+    Save / Load
+  </button>
+</div>
 <!--modal-->
 <div class="modal fade" id="deckProcessorModal" tabindex="-1" aria-labelledby="deckProcessorModalLabel"
      aria-hidden="true">
@@ -12,6 +19,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <button>Save Deck loaded</button>
         <app-deck-processor></app-deck-processor>
       </div>
     </div>
@@ -89,6 +97,28 @@
       <br/>
       <div class="col-12 col-md-3">
         <app-graveyard></app-graveyard>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Save Game Modal -->
+<div class="modal fade" id="saveGameModal" tabindex="-1" aria-labelledby="saveGameModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" style="z-index: 10">
+      <div class="modal-header">
+        <h5 class="modal-title" id="saveGameModalLabel">Save Current Game</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <label for="saveNameInput" class="form-label">Save Name</label>
+        <input id="saveNameInput" [(ngModel)]="saveName" class="form-control" placeholder="e.g., Turn 5 vs Rakdos" />
+
+        <div class="mt-3 text-end">
+          <button class="btn btn-primary" data-bs-dismiss="modal" (click)="saveGame()">
+            Save Game
+          </button>
+        </div>
       </div>
     </div>
   </div>
