--- a/src/app/components/hand/hand.component.html
+++ b/src/app/components/hand/hand.component.html
@@ -1,5 +1,6 @@
 <div class="hand-container row" style="display: flex; flex-wrap: wrap; justify-content: flex-start;">
   @for (card of handCards; track card.instanceId) {
+    @for (i of getCopies(card.quantity); track i) {
   <div class="col-2 col-md-1 card-item" (click)="onCardClick($event, card)">
     <p><span [innerHTML]="card.sanitizedManaCost"></span><br></p>
     @if (card.card_faces && !card.isSingleImageDoubleFace) {
@@ -10,6 +11,7 @@
            style="width: 100%; height: auto;">
     }
   </div>
+  }
   }
 </div>
 
