--- a/src/app/components/card-detail/card-detail.component.html
+++ b/src/app/components/card-detail/card-detail.component.html
@@ -3,7 +3,7 @@
   <div class="modal-content">
     <button class="close-btn" (click)="close()">×</button>
     <div class="card-info">
-      <img [src]="card?.image_uris?.normal" alt="{{ card?.name }}" class="img-fluid mb-3" />
+      <img [src]="activeFace?.image_uris?.normal" alt="{{ activeFace?.name }}" class="img-fluid mb-3" />
       @if (card?.card_faces?.length > 1 && !card.isSingleImageDoubleFace) {
         <button (click)="toggleCardFace()" class="btn btn-secondary mt-2">
           Cambiar cara
@@ -11,9 +11,9 @@
       }
       <h3>{{ card.name }}</h3>
       <p><strong>Tipo: </strong> {{ card.type_line }}</p>
-      <p><strong>Texto: </strong><span [innerHTML]="card.sanitizedOracleText"></span></p>
-      <p><strong>Coste de maná: </strong><span [innerHTML]="card.sanitizedManaCost"></span></p>
-      <p><strong>CMC: </strong> <span [innerHTML]="card.cmc"></span></p>
+      <p><strong>Texto: </strong><span [innerHTML]="activeFace.sanitizedOracleText"></span></p>
+      <p><strong>Coste de maná: </strong><span [innerHTML]="activeFace.sanitizedManaCost"></span></p>
+      <p><strong>CMC: </strong> <span [innerHTML]="activeFace.cmc"></span></p>
       <!-- Agrega más campos si quieres -->
     </div>
   </div>
