--- a/src/app/components/permanent-card/permanent-card.component.css
+++ b/src/app/components/permanent-card/permanent-card.component.css
@@ -63,3 +63,14 @@
 .context-menu ul li:hover {
   background-color: #eee;
 }
+
+.tap-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  height: 100px;
+  transform: translate(-50%, -50%);
+  opacity: 0.7;
+  pointer-events: none;
+}
