--- a/src/app/components/battlefield/battlefield.component.html
+++ b/src/app/components/battlefield/battlefield.component.html
@@ -27,10 +27,9 @@
 </div>
 
 <div>
-  <!--apartado para poner la linea temporal del turno-->
+  <app-turn-timeline></app-turn-timeline>
 </div>
 
-<!-- Contenedor principal fuera del modal -->
 <div class="container mt-6">
 
   <div class="row">
@@ -97,6 +96,32 @@
       <br/>
       <div>
         <app-graveyard></app-graveyard>
+      </div>
+
+      <div class="mana-pool mt-3 p-2 border rounded bg-light" style="min-width: 240px;">
+        <h6 class="text-center">Mana Pool</h6>
+        <div class="mana-colors">
+          @for (mana of manaColors; track $index) {
+            <div class="split-button" [ngClass]="mana.colorClass">
+              <button class="split-btn left" (click)="removeMana(mana.type)">−</button>
+              <img [src]="mana.icon" class="mana-icon" alt="{{mana.type}}">
+              <span class="mana-amount">{{ manaPool[mana.type] || 0 }}</span>
+              <button class="split-btn right" (click)="addMana(mana.type)">+</button>
+            </div>
+          }
+        </div>
+        <button class="btn btn-sm btn-outline-danger w-100 mt-2" (click)="clearManaPool()">
+          Limpiar Mana Pool
+        </button>
+      </div>
+
+      <!-- Contadores extra debajo -->
+      <div class="counters mt-3 p-2 border rounded bg-light text-center" style="min-width: 150px;">
+        <h6>Recursos</h6>
+        <div class="counter-item">Vidas: {{lifePoints}}</div>
+        <div class="counter-item">Energía: {{energyCounters}}</div>
+        <div class="counter-item">Veneno: {{poisonCounters}}</div>
+        <div class="counter-item">Experiencia: {{experienceCounters}}</div>
       </div>
     </div>
   </div>
