--- a/src/app/components/battlefield/battlefield.component.html
+++ b/src/app/components/battlefield/battlefield.component.html
@@ -116,17 +116,45 @@
       </div>
 
       <!-- Contadores extra debajo -->
-      <div class="counters mt-3 p-2 border rounded bg-light text-center" style="min-width: 150px;">
+      <div class="counters mt-3 p-2 border rounded bg-light text-center" style="min-width: 240px;">
         <h6>Recursos</h6>
-        <div class="counter-item">Vidas: {{lifePoints}}</div>
-        <div class="counter-item">Energía: {{energyCounters}}</div>
-        <div class="counter-item">Veneno: {{poisonCounters}}</div>
-        <div class="counter-item">Experiencia: {{experienceCounters}}</div>
+        <div class="res-colors">
+          <!-- Vida -->
+          <div class="res-control res-life">
+            <button class="res-btn" (click)="removeLife()">−</button>
+            <span class="res-icon">❤️</span>
+            <span class="res-amount">{{ lifePoints }}</span>
+            <button class="res-btn" (click)="addLife()">+</button>
+          </div>
+
+          <!-- Energía -->
+          <div class="res-control res-energy">
+            <button class="res-btn" (click)="removeEnergy()">−</button>
+            <img src="https://svgs.scryfall.io/card-symbols/E.svg" alt="energy" class="res-icon">
+            <span class="res-amount">{{ energyCounters }}</span>
+            <button class="res-btn" (click)="addEnergy()">+</button>
+          </div>
+
+          <!-- Veneno -->
+          <div class="res-control res-poison">
+            <button class="res-btn" (click)="removePoison()">−</button>
+            <img src="https://svgs.scryfall.io/card-symbols/H.svg" class="res-icon" alt="poison">
+            <span class="res-amount">{{ poisonCounters }}</span>
+            <button class="res-btn" (click)="addPoison()">+</button>
+          </div>
+
+          <!-- Experiencia -->
+          <div class="res-control res-xp">
+            <button class="res-btn" (click)="removeXp()">−</button>
+            <span class="res-icon">⭐</span>
+            <span class="res-amount">{{ experienceCounters }}</span>
+            <button class="res-btn" (click)="addXp()">+</button>
+          </div>
       </div>
     </div>
   </div>
+  </div>
 </div>
-
 <!-- Save Game Modal -->
 <div class="modal fade" id="saveGameModal" tabindex="-1" aria-labelledby="saveGameModalLabel" aria-hidden="true">
   <div class="modal-dialog">
