better look in stack, hand now allways visible, trigger discard added
voy a intentar mejorar el visual de todo ahora

--- a/src/app/components/deck-processor/deck-processor.component.html
+++ b/src/app/components/deck-processor/deck-processor.component.html
@@ -1,5 +1,7 @@
 <div>
-  <textarea type="text" name="task" rows="3" [(ngModel)]="deckInput" placeholder="Pega tu mazo aquí... (Formato MTGO)"></textarea>
+  <textarea type="text" name="task" rows="3" [(ngModel)]="deckInput" placeholder="Pega tu mazo aquí... (Formato MTGO)
+1 sol ring
+4 Forest"></textarea>
   <button type="button" (click)="processDeckInput()">Cargar Mazo</button>
 </div>
 @if (loadError) {
