--- a/src/app/components/hand/hand.component.css
+++ b/src/app/components/hand/hand.component.css
@@ -1,3 +1,10 @@
+.hand-container {
+  position: sticky;
+  bottom: 0;
+  z-index: 10;       /* para que esté encima */
+  width: 100%;
+}
+
 .card-item {
   text-align: center;
   padding: 0;
