--- a/src/app/components/stack/stack.component.html
+++ b/src/app/components/stack/stack.component.html
@@ -55,8 +55,8 @@
           <hr>
           <span class="text-sm" [innerHTML]=" item.efecto || item.description || 'Trigger'"></span>
           <div class="flex gap-1">
-            <button (click)="moveUp(tempStack.indexOf(item))" [disabled]="tempStack.indexOf(item) === 0 || item.type == 'Spell' ||  tempStack[tempStack.indexOf(item) - 1]?.type === 'Spell'" class="btn btn-xs btn-outline">▲</button>
-            <button (click)="moveDown(tempStack.indexOf(item))" [disabled]="tempStack.indexOf(item) === tempStack.length - 1 || item.type == 'Spell' ||  tempStack[tempStack.indexOf(item) - 1]?.type === 'Spell'" class="btn btn-xs btn-outline">▼</button>
+            <button (click)="moveUp(tempStack.indexOf(item))" [disabled]="tempStack.indexOf(item) === 0 || item.type == 'Spell' ||  tempStack[tempStack.indexOf(item) - 1].type === 'Spell'" class="btn btn-xs btn-outline">▲</button>
+            <button (click)="moveDown(tempStack.indexOf(item))" [disabled]="tempStack.indexOf(item) === tempStack.length - 1 || item.type == 'Spell' ||  tempStack[tempStack.indexOf(item) - 1].type === 'Spell'" class="btn btn-xs btn-outline">▼</button>
           </div>
         </li>
       }
