Storm y Split Second working

--- a/src/app/components/stack/stack.component.html
+++ b/src/app/components/stack/stack.component.html
@@ -49,7 +49,7 @@
     <div>[ ▲ ultimo ▼ primero en resolver ]</div>
 
     <ul>
-      @for (item of tempStack; track $index) {
+      @for (item of stackCards; track $index) {
         <li class="flex justify-between items-center mb-2 p-2 bg-gray-100 rounded">
           <span>{{item.source.name}}:</span>
           <hr>
